--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,14 +11,19 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 djoser==2.2.3
 drf-spectacular==0.27.2
+gunicorn==22.0.0
 idna==3.7
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 oauthlib==3.2.2
+packaging==24.1
 pillow==10.4.0
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pycparser==2.22
 PyJWT==2.8.0
+python-dotenv==1.0.1
 python3-openid==3.2.0
 PyYAML==6.0.1
 referencing==0.35.1
