--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -16,7 +16,7 @@ services:
 #    image: redis:6.2.6
 
   backend:
-    build: ./backend/
+    image: toomike/gazprom_backend
     env_file: .env
     depends_on:
       - db
@@ -26,11 +26,12 @@ services:
       - media:/app/media
 
   nginx:
-    build: ./nginx/
+    image: toomike/gazprom_nginx
     depends_on:
       - backend
     ports:
       - "8000:80"
     volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - media:/media
       - static:/backend_static
