--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,5 +32,6 @@ services:
     ports:
       - "8000:80"
     volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - media:/media
       - static:/backend_static
