--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,8 +12,8 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
 
-#  redis:
-#    image: redis:6.2.6
+  redis:
+    image: redis:6.2.6
 
   backend:
     build: ./backend/
