--- a/backend/supervisord.conf
+++ b/backend/supervisord.conf
@@ -8,6 +8,10 @@ autostart=true
 autorestart=true
 stdout_logfile=/var/log/gunicorn.log
 stderr_logfile=/var/log/gunicorn_err.log
+; stdout_logfile=/dev/stdout
+; stderr_logfile=/dev/stderr
+; stdout_logfile_maxbytes=0
+; stderr_logfile_maxbytes=0
 
 ; [program:celery]
 ; command=celery -A backend worker --loglevel=info
