--- a/backend/supervisord.conf
+++ b/backend/supervisord.conf
@@ -6,12 +6,13 @@ command=gunicorn --bind 0.0.0.0:8000 backend.wsgi
 directory=/app
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/gunicorn.log
-stderr_logfile=/var/log/gunicorn_err.log
-; stdout_logfile=/dev/stdout
-; stderr_logfile=/dev/stderr
-; stdout_logfile_maxbytes=0
-; stderr_logfile_maxbytes=0
+; stdout_logfile=/var/log/gunicorn.log
+; stderr_logfile=/var/log/gunicorn_err.log
+; Ниже настройка для вывода лога в консоль
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
 
 ; [program:celery]
 ; command=celery -A backend worker --loglevel=info
