--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -35,6 +35,7 @@ requests==2.32.3
 requests-oauthlib==2.0.0
 rpds-py==0.19.1
 ruff==0.5.6
+sentry-sdk==2.12.0
 social-auth-app-django==5.4.2
 social-auth-core==4.5.4
 sqlparse==0.5.1
