--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -12,15 +12,15 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
 
-#  redis:
-#    image: redis:6.2.6
+  redis:
+    image: redis:6.2.6
 
   backend:
     image: toomike/gazprom_backend
     env_file: .env
     depends_on:
       - db
-#      - redis
+      - redis
     volumes:
       - static:/backend_static
       - media:/app/media
