--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
     env_file: .env
     depends_on:
       - db
-#      - redis
+      - redis
     volumes:
       - static:/backend_static
       - media:/app/media
