--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.3'
-
 volumes:
   pg_data:
   static:
@@ -28,14 +26,14 @@ services:
   worker:
     build: ./backend/
     entrypoint: celery
-    command: -A celery_app.app worker --loglevel=info
+    command: -A backend.celery_app.app worker --loglevel=info
     env_file: .env
-    volumes:
-      - ./backend/:/backend
     links:
       - redis
     depends_on:
       - redis
+    volumes:
+      - media:/app/media
 
   nginx:
     build: ./nginx/
