--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,7 @@
-FROM python:3.9
+FROM python:3.11
 
-# Установка рабочего каталога
 WORKDIR /app
-
-# Копирование и установка зависимостей
 COPY requirements.txt .
 RUN pip install -r requirements.txt --no-cache-dir
-
-# Установка supervisor
-RUN apt-get update && apt-get install -y supervisor
-
-# Копирование исходного кода приложения
 COPY . .
-
-# Копирование конфигурационного файла supervisord
-COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
-
-# Команда для запуска supervisord
-CMD ["/usr/bin/supervisord"]
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "backend.wsgi"]
