--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
 
   backend:
     build: ./backend/
+    entrypoint: gunicorn
+    command: backend.wsgi:application --bind 0.0.0.0:8000
     env_file: .env
     depends_on:
       - db
