--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -7,21 +7,64 @@ services:
   db:
     image: postgres:13.10
     env_file: .env
+    restart: always
     volumes:
       - pg_data:/var/lib/postgresql/data
+    networks:
+      - backend_network
 
   redis:
-    image: redis:6.2.6
+    image: redis:7.4
+    restart: always
+    networks:
+      - backend_network
 
   backend:
     image: toomike/gazprom_backend
+    command: gunicorn backend.wsgi:application --bind 0.0.0.0:8000
     env_file: .env
+    restart: always
     depends_on:
       - db
       - redis
     volumes:
       - static:/backend_static
       - media:/app/media
+    networks:
+      - backend_network
+
+  worker:
+    image: toomike/gazprom_backend
+    command: celery -A backend.celery_app.app worker --loglevel=info -E
+    env_file: .env
+    restart: always
+    links:
+      - redis
+    depends_on:
+      - redis
+      - db
+    volumes:
+      - media:/app/media
+    networks:
+      - backend_network
+
+  flower:
+    image: toomike/gazprom_backend
+    entrypoint: sh -c "sleep 10 && celery -A backend.celery_app.app flower"
+    env_file: .env
+    restart: always
+    links:
+      - redis
+      - worker
+    depends_on:
+      - redis
+      - worker
+    volumes:
+      - media:/app/media
+    ports:
+      - "5555:5555"
+    networks:
+      - backend_network
 
   nginx:
     image: toomike/gazprom_nginx
@@ -29,7 +72,14 @@ services:
       - backend
     ports:
       - "8000:80"
+    restart: always
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - media:/media
       - static:/backend_static
+    networks:
+      - backend_network
+
+networks:
+  backend_network:
+    driver: bridge
