--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -1,7 +1,8 @@
 volumes:
   pg_data:
-  static:
+  backend_static:
   media:
+  static:
 
 services:
   db:
@@ -28,7 +29,7 @@ services:
       - db
       - redis
     volumes:
-      - static:/backend_static
+      - backend_static:/backend_static
       - media:/app/media
     networks:
       - backend_network
@@ -61,6 +62,7 @@ services:
       - worker
     volumes:
       - media:/app/media
+      - static:/usr/local/lib/python3.11/site-packages/flower/static
     ports:
       - "5555:5555"
     networks:
@@ -76,7 +78,8 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - media:/media
-      - static:/backend_static
+      - .flower/static:/static
+      - backend_static:/backend_static
     networks:
       - backend_network
 
