--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,8 @@
 volumes:
   pg_data:
-  static:
+  backend_static:
   media:
+  static:
 
 services:
   db:
@@ -22,7 +23,7 @@ services:
       - db
       - redis
     volumes:
-      - static:/backend_static
+      - backend_static:/backend_static
       - media:/app/media
 
   worker:
@@ -50,6 +51,7 @@ services:
       - worker
     volumes:
       - media:/app/media
+      - static:/usr/local/lib/python3.11/site-packages/flower/static
     ports:
       - "5555:5555"
 
@@ -62,4 +64,5 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - media:/media
-      - static:/backend_static
+      - backend_static:/backend_static
+      - static:/static
